# colour-vision-test

./: .gitignore  =0.10.0  README.md  main.py  pyproject.toml  requirements.txt  test_face_tracking.py
components/: __init__.py  colour_vision_test.py  config.py  distance_guide.py  ishihara_data.py  results.py  tests.py  ui.py  webcam_live.py  webcam_test.py
components/hue_arrangement/: __init__.py  hue_logic.py  hue_ui.py
components/performance_tracker/: __init__.py  performance_tracker.py  performance_ui.py  progress_visualizer.py  result_interpreter.py  result_interpreter.py.backup  score_tracker.py
components/tritan_test/: __init__.py  tritan_logic.py  tritan_ui.py
components/utils/: __init__.py  pdf_generator.py
components/webcam/: __init__.py  color_analysis.py  face_tracking.py  webcam_capture.py  webcam_test.py  webcam_ui.py
